--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.34.16",
     "sharp": "^0.29.3"
   },
   "devDependencies": {
