--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "next": "12.0.7",
+    "next": "^12.1.4",
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.34.16",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.2",
