--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "mongoose": "^6.1.5",
     "next-ym": "^2.3.5",
     "nodemon": "^2.0.15",
+    "react-indiana-drag-scroll": "^2.1.0",
     "tslib": "^2.3.1"
+  },
+  "devDependencies": {
+    "form-data": "^4.0.0"
   }
 }
