--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DB_HOST=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000
 PORT=8000
-API_URL=http://localhost:8000/api
+API_URL=http://146.19.207.28:8000/api
