--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 80",
-    "build": "next build",
-    "start": "next start ",
+    "build": "next build -p 80",
+    "start": "next start -p 80",
     "lint": "next lint"
   },
   "dependencies": {
